--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ variables:
 
 test:
     stage: test
+    tags:
+        - self-hosted
+        - docker
     script:
         - cd ${CI_PROJECT_DIR}
         - ./assignment-autotest/docker/docker-run-test.sh
